src/components/CaseEditor.scss
@import "../UniversalStyles";
.addCaseForm {
  padding: 3em;
}

.addCaseForm h4 {
  font-weight: 400;
  padding-top: 1em;
}

.choice {
  padding-bottom: 0.5em;
}

.form-section {
  border-bottom:1px solid #ccc;
  &.quick {
    border: none;
  }
}

.field-case {
  padding-bottom: 2rem;
  padding-top: 1rem;
  &.top {
    padding-top: 0;
  }
  // &.select {
  //   padding-bottom: 1rem;
  // }
  // &.related, &.media {
  //   padding-bottom: 1.6rem;
  // }
  &.last {
    border: none;
  }
}

.choicelist {
  opacity: 1;
}

.case-html {
  p {
    text-align: left;
  }
}

.list.videos {
  margin-top: -7px;

  & > div > div > div {
    @include media-breakpoint-up(md) {
      width: 100% !important;
    }
  }
}

.custom-textarea {
  border: 2px solid $black;
  padding-left: 1rem;
  padding-right: 1rem;
  min-height: 70px;
}

.custom-number-field {
  border: 2px solid $black;
  padding-left: 1rem;
  @include media-breakpoint-up(lg) {
    width: 70% !important;
  }
}

.custom-field {
  border: 2px solid $black;
  padding-left: 1rem;
  @include media-breakpoint-up(lg) {
    width: 70% !important;
  }
  >div {
    display: none;
  }
  &.org-title {
    font-size: 0.95rem !important;
  }
}

/* Targets Dropdown Menu Items */
div[role=presentation]{

  & > div[role=menu]{
    display: inline-block !important;
  }

  & > div[role=menu]
  > div > span[role=menuitem] {
    white-space: normal !important;

    & > div > div {
      margin-top: 10px;
      margin-bottom: 10px;
    }

  }
}

label {
  margin: 0;
}

.related-fields {
  border: 2px solid $black;
  padding-left: 1rem;
  @include media-breakpoint-up(lg) {
    width: 70% !important;
  }
  padding-bottom: 0.5rem;
  display: block !important;
  // height: 44px;
  div {
    margin-bottom: 0 !important;
  }
  hr {
    display: none;
  }
}

.explanatory-text {
  margin-bottom: 0.5rem;
  font-weight: $blond-weight;
  span {
    font-weight: $blond-weight;
  }
  @include media-breakpoint-up(md) {
    width: 70%;
  }
}


.custom-select {
  @include media-breakpoint-up(lg) {
    width: 80% !important;
  }

  @include media-breakpoint-up(md) {
    height: auto !important;
    max-height: 60px !important;
  }

  border: 2px solid $black;
  padding-left: 1rem;
  display: block;
  height: auto;

  hr {
    display: none;
  }
  &.Select--single {
    padding-left: 0;
    .Select-control {
      border: none;
      box-shadow: none;
    }
  }

/* -------------- TODO #733-------------------- */
/* Make text wrap and adjust height for dropdown menus with longer placeholder text on small screens */
  & > div {
    @include media-breakpoint-up(sm) {
      width: 80% !important;
      height: auto !important;
      white-space: normal !important;
      bottom: 0px;
      top: 4px;
    }
    padding: 0px;
  }

  /*
  & > div > div > div {
    @include media-breakpoint-up(sm) {
    }
  }
  */

  & > div > div > button {
    @include media-breakpoint-up(sm) {
      right: -25% !important;
    }
  }
}
/* -------------- TODO #733-------------------- */
.custom-select > div {
  @include media-breakpoint-up(sm) {
    //width: 80% !important;
    //height: auto !important;
    //white-space: normal;
    //margin-top: 2% !important;
  }
  //bottom: auto !important;
  //top: auto !important;
  //padding-right: 56px;

}
.custom-select > div > div {
  @include media-breakpoint-up(sm) {

  }
  //min-height: 20px;
}

.custom-select > div > div > button {
   @include media-breakpoint-up(sm) {
    //padding: 0px;
    //margin-right: -25px;
    //margin-top: 2% !important;
    //top: -7px !important;
  }
  //position: absolute;
}

/* Search for existing case/component': Adjust alignment of outer form container*/
.Select.custom-select{
  @include media-breakpoint-up(md) {
    position: relative !important;
    max-height: 65px !important;
    min-height: 40px;
    top: 0px !important;
  }
}

/* 'Search for existing case/component': Make sure text container width fills outer container */
div.Select-control {
  @include media-breakpoint-up(md) {
    width: 100% !important;
    top: 0px;
    background: 0;
  }
}

/* Fix drop down for 'Search for existing case/component' */
.Select-menu-outer {
  position: absolute;
  color: rgba(0, 0, 0, 0.87);
  background-color: rgb(255, 255, 255);
  transition: transform 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms, opacity 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
  box-sizing: border-box;
  font-family: Roboto, sans-serif;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 6px, rgba(0, 0, 0, 0.12) 0px 1px 4px;
  border-radius: 2px;
  position: fixed;
  z-index: 2100;
  opacity: 1;
  transform: scaleY(1);
  transform-origin: left top 0px;
  max-height: 1024px;
  overflow-y: auto;
  min-height: 200px;
  margin-top: 30px !important;
}

/* Make Photos, Videos, Files forms match width of other forms */

.react-dropzone-s3-uploader {
  @include media-breakpoint-up(md) {
    width: 100% !important;
  }
}

/* -------------- TODO #733-------------------- */

/*.related-fields > div > div > input {
  //top: -4px;
}

span.Select-multi-value-wrapper {
  @include media-breakpoint-up(md) {
    //width: 100%;
  }
}

div.Select-placeholder {
  @include media-breakpoint-up(sm) {
    //top: 2px;
  }
  @include media-breakpoint-up(md) {
    //top: -2px;
  }
}

span.Select-arrow-zone {
  @include media-breakpoint-up(sm) {
    //top: 7px;
  }
  @include media-breakpoint-up(md) {
    //position: absolute;
    //top: 2px;
    //right: 0px;
  }
}

div[name="scope_of_influence"].custom-select > div {
  //top: 8px;
} */
/* -------------- TODO #733-------------------- */

.section-heading {
  padding-top: 3rem;
  &.hidden {
    display: none;
  }
}

.sub-heading {
  font-weight: $medium-weight;
  line-height: 40px;
  margin: 0;
  padding-bottom: 0.6rem;
  &.top {
    padding-top: 0;
    border: none;
  }
  &.org {
    font-size: 0.6rem;
  }
  &.hidden {
    display: none;
  }
}

#undefined-Selectanissue-* {
  color: blue !important;
}


.sub-sub-heading {
  font-weight: $medium-weight;
  color: $black;
  line-height: 18px;
  margin-bottom: 5px;
  padding-top:14px;
  display:inline-block;
  text-transform: capitalize;
}
.sub-sub-heading + div {
  display:inline;
  margin-left:5px;
}
.sub-sub-heading + div.tags {
  display: block;
}

.sub-sub-heading + div a {
  color:$black;
  font-size:16px;
  position:relative;
  &:hover {
    color:$interactive-color;
  }
}

.incomplete-warning {
  margin: 0 !important;
}


.case-location {
  .geosuggest__input-wrapper, .geosuggest__suggests {
    width: 100%;
  }
}

.main-area {
  .title-edit {
    @include media-breakpoint-up(sm) {
      padding-top: 2rem;
    }
    border: none;
  }
}

.itemPics {
  .box-container {
    padding-bottom: 1rem;
    @include media-breakpoint-only(sm) {
      margin-bottom: 2rem;
    }
  }
  .file {
    position: relative;
    padding: 0.5rem 3rem 0.5rem 0.5rem;
    border: 2px solid $dark-grey;
    margin-bottom: 0.5rem;
    .trash {
      position: absolute;
      cursor: pointer;
      width: 1.4rem;
      height: 1.4rem;
      bottom: 10px;
      right: 12px;
      background-image: url("../img/trash.png");
      background-repeat: no-repeat;
      background-size: 0.9rem;
      background-color: #fff;
      background-position: center;
      z-index: 1;
    }
  }
  .box {
    position: relative;
    overflow: hidden;
    height: 160px;
    border: 4px solid $dark-grey;
    .checkbox {
      position: absolute;
      width: 1.4rem;
      height: 1.4rem;
      right: 0;
      background: #fff;
      background-repeat: no-repeat;
      background-size: 1.4rem;
      background-image: url("../img/star-outline.png");
      cursor: pointer;
    }
    .trash {
      position: absolute;
      cursor: pointer;
      width: 1.4rem;
      height: 1.4rem;
      bottom: 1px;
      right:0;
      background-image: url("../img/trash.png");
      background-repeat: no-repeat;
      background-size: 0.9rem;
      background-color: #fff;
      background-position: center;
      z-index: 1;
    }
    small {
      background: #fff;
      position: absolute;
      left: 0;
      width: 100%;
      bottom: 0;
    }
    text-align: center;
    &.lead {
      border: 4px solid $interactive-color;
      .trash {
        bottom: 1px;
        border: none;
      }
      .checkbox {
        background-image: url("../img/star.png");
      }
    }
  }
}

